<resources>
    <string name="app_name">eGreet</string>
    <string name="create_birthday_card">Create Birthday Card</string>
    <string name="enter_the_name">Enter The Name</string>
    <string name="harsh">Harsh</string>
    <string name="createButton">Create</string>
    <string name="create_beautiful">CREATE BEAUTIFUL</string>
    <string name="enter_name">Enter Name</string>
    <string name="birthday_card">BIRTHDAY CARD</string>
    <string name="happy_birtday">Happy Birtday</string>
    <string name="happy_birthday">Happy Birthday</string>
    <string name="blow_out_a_candle_and_make_a_wish">Blow out a candle and make a wish.</string>
    <string name="don_t_forget_to_smile">Don\'t forget to smile :)</string>
    <string name="make_a_birthday_card_for_the_nones_who_matter">Make a Birthday Card for the \nones who matter!</string>
</resources>